--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Luis Irizarry"
+  name             : "Luis A. Irizarry"
   avatar           : "luis.jpeg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Ph.D Student in Linguistics"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
