--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/mequbel_cain"
+  twitter          : "mequbel_cain"
   vine             :
   weibo            :
   xing             :
