--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
+
+  - title: "Other Affiliations"
+    url: /organizations/    
     
   - title: "Portfolio"
     url: /portfolio/
@@ -20,3 +23,5 @@ main:
     
   - title: "Guide"
     url: /markdown/
+
+    - title: "λ"
