--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Talks λ"
     url: /talks/    
 
   - title: "Teaching"
@@ -23,5 +23,3 @@ main:
     
   - title: "Guide"
     url: /markdown/
-
-    - title: "λ"
