--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 # Site Settings
 locale                   : "en-US"
