--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  - title: "Other Affiliations"
+  - title: "Community Affiliations"
     url: /organizations/    
     
   - title: "Portfolio"
