--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /teaching/    
 
   - title: "Community Affiliations"
-    url: /organizations/    
+    url: /affiliations/    
     
   - title: "Portfolio"
     url: /portfolio/
