--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-twitter:
-  username               : &twitter
+X:
+  username               : &X
 facebook:
   username               :
   app_id                 :
@@ -110,7 +110,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "mequbel_cain"
+  X          : "mequbel_cain"
   vine             :
   weibo            :
   xing             :
